--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,26 +1,28 @@
 ---
 
-openhabcloud_enabled: true
+openhab_cloud_enabled: true
 
-openhabcloud_identifier: openhab-cloud
+openhab_cloud_identifier: openhab-cloud
 
-openhabcloud_domain_name: ""
-openhabcloud_express_key: "some express key"
-openhabcloud_email_address: "my@openhab.org"
+openhab_cloud_domain_name: ""
+openhab_cloud_express_key: "some express key"
+openhab_cloud_email_address: "my@openhab.org"
 
-openhabcloud_uid: ""
-openhabcloud_gid: ""
+openhab_cloud_uid: ""
+openhab_cloud_gid: ""
 
-openhabcloud_base_path: "{{ openhabcloud_identifier }}"
+openhab_cloud_base_path: "{{ openhab_cloud_identifier }}"
+openhab_cloud_source_path: "{{ openhab_cloud_base_path }}/source"
+openhab_cloud_config_path: "{{ openhab_cloud_base_path }}/config"
 
-openhabcloud_repository: "https://github.com/openhab/openhab-cloud.git"
-openhabcloud_repository_branch: "main"
+openhab_cloud_repository: "https://github.com/openhab/openhab-cloud.git"
+openhab_cloud_repository_branch: "main"
 
 # The base container network. It will be auto-created by this role if it doesn't exist already.
-openhabcloud_container_network: "{{ openhabcloud_identifier }}"
+openhab_cloud_container_network: "{{ openhab_cloud_identifier }}"
 
 # List of systemd services that the openhabcloud systemd service depends on
-openhabcloud_systemd_required_services_list: ['docker.service']
+openhab_cloud_systemd_required_services_list: ['docker.service']
 
 # List of systemd services that openhabcloud systemd service wants
-openhabcloud_systemd_wanted_services_list: []
+openhab_cloud_systemd_wanted_services_list: []
