--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,47 +1,64 @@
 ---
 
+- name: Ensure openHAB Cloud paths exist
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    mode: "0750"
+    owner: "{{ openhab_cloud_uid }}"
+    group: "{{ openhab_cloud_gid }}"
+  with_items:
+    - "{{ openhab_cloud_base_path }}"
+    - "{{ openhab_cloud_source_path }}"
+    - "{{ openhab_cloud_config_path }}"
+
+- name: Ensure openHAB Cloud source path is added as git safe directory
+  ansible.builtin.command: git config --global --add safe.directory {{ openhab_cloud_source_path }}
+  check_mode: no
+
 - name: Checkout openHAB Cloud
   ansible.builtin.git:
-    repo: "{{ openhabcloud_repository }}"
-    dest: "{{ openhabcloud_base_path }}"
-    version: "{{ openhabcloud_repository_branch }}"
+    repo: "{{ openhab_cloud_repository }}"
+    dest: "{{ openhab_cloud_source_path }}"
+    version: "{{ openhab_cloud_repository_branch }}"
     single_branch: yes
     force: yes
 
-- name: Ensure openHAB Cloud path is added as git safe directory
-  ansible.builtin.command: git config --global --add safe.directory {{ openhabcloud_base_path }}
-  check_mode: no
-
-- name: Change openHAB Cloud folder ownership
+- name: Change openHAB Cloud source folder ownership
   ansible.builtin.file:
-    dest: "{{ openhabcloud_base_path }}"
-    owner: "{{ openhabcloud_uid }}"
-    group: "{{ openhabcloud_gid }}"
+    dest: "{{ openhab_cloud_source_path }}"
+    owner: "{{ openhab_cloud_uid }}"
+    group: "{{ openhab_cloud_gid }}"
     recurse: yes
 
-- name: Ensure openHAB Cloud docker-composeand config.json files are created
+- name: Ensure openHAB Cloud docker-compose file is created
   ansible.builtin.template:
-    src: "{{ role_path }}/templates/{{ item }}.j2"
-    dest: "{{ openhabcloud_base_path }}/deployment/docker-compose/{{ item }}"
+    src: "{{ role_path }}/templates/docker-compose.yml.j2"
+    dest: "{{ openhab_cloud_source_path }}/deployment/docker-compose/docker-compose.yml"
     mode: "0640"
-    owner: "{{ openhabcloud_uid }}"
-    group: "{{ openhabcloud_gid }}"
-  with_items:
-    - docker-compose.yml
-    - config.json
+    owner: "{{ openhab_cloud_uid }}"
+    group: "{{ openhab_cloud_gid }}"
+
+- name: Ensure openHAB Cloud config.json file is created
+  ansible.builtin.template:
+    src: "{{ role_path }}/templates/config.json.j2"
+    dest: "{{ openhab_cloud_config_path }}/config.json"
+    mode: "0640"
+    owner: "{{ openhab_cloud_uid }}"
+    group: "{{ openhab_cloud_gid }}"
 
 - name: Ensure openHAB Cloud docker image is build
   ansible.builtin.command:
     cmd: "{{ devture_systemd_docker_base_host_command_docker }} compose build"
-    chdir: "{{ openhabcloud_base_path }}/deployment/docker-compose"
+    chdir: "{{ openhab_cloud_source_path }}/deployment/docker-compose"
 
 - name: Ensure openHAB Cloud container network is created
   community.general.docker_network:
-    name: "{{ openhabcloud_container_network }}"
+    name: "{{ openhab_cloud_container_network }}"
     driver: bridge
 
 - name: Ensure openHAB Cloud systemd service installed
   ansible.builtin.template:
     src: "{{ role_path }}/templates/systemd/openhab-cloud.service.j2"
-    dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ openhabcloud_identifier }}.service"
+    dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ openhab_cloud_identifier }}.service"
     mode: "0644"
