--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -1,25 +1,25 @@
 ---
 
-- name: Check existence of openhabcloud systemd service
+- name: Check existence of openHAB Cloud systemd service
   ansible.builtin.stat:
-    path: "{{ devture_systemd_docker_base_systemd_path }}/{{ openhabcloud_identifier }}.service"
-  register: openhabcloud_service_stat
+    path: "{{ devture_systemd_docker_base_systemd_path }}/{{ openhab_cloud_identifier }}.service"
+  register: openhab_cloud_service_stat
 
-- when: openhabcloud_service_stat.stat.exists | bool
+- when: openhab_cloud_service_stat.stat.exists | bool
   block:
-    - name: Ensure openhabcloud is stopped
+    - name: Ensure openHAB Cloud is stopped
       ansible.builtin.service:
-        name: "{{ openhabcloud_identifier }}"
+        name: "{{ openhab_cloud_identifier }}"
         state: stopped
         enabled: false
         daemon_reload: true
 
-    - name: Ensure openhabcloud systemd service doesn't exist
+    - name: Ensure openHAB Cloud systemd service doesn't exist
       ansible.builtin.file:
-        path: "{{ devture_systemd_docker_base_systemd_path }}/{{ openhabcloud_identifier }}"
+        path: "{{ devture_systemd_docker_base_systemd_path }}/{{ openhab_cloud_identifier }}"
         state: absent
 
     - name: Ensure openhabcloud base path doesn't exist
       ansible.builtin.file:
-        path: "{{ openhabcloud_base_path }}"
+        path: "{{ openhab_cloud_base_path }}"
         state: absent
