--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -1,22 +1,22 @@
 ---
 
-- name: (Deprecation) Catch and report renamed openhabcloud settings
+- name: (Deprecation) Catch and report renamed openHAB Cloud settings
   ansible.builtin.fail:
     msg: >-
       Your configuration contains a variable, which now has a different name.
       Please change your configuration to rename the variable (`{{ item.old }}` -> `{{ item.new }}`).
   when: "item.old in vars"
   with_items:
-    - {'old': 'openhabcloud_container_additional_networks_additional', 'new': 'openhabcloud_container_additional_networks_custom'}
+    - {'old': 'openhab_cloud_container_additional_networks_additional', 'new': 'openhab_cloud_container_additional_networks_custom'}
 
-- name: Fail if required openhabcloud settings not defined
+- name: Fail if required openHAB Cloud settings not defined
   ansible.builtin.fail:
     msg: >
       You need to define a required configuration setting (`{{ item }}`).
   when: "vars[item] == ''"
   with_items:
-    - openhabcloud_identifier
-    - openhabcloud_uid
-    - openhabcloud_gid
-    - openhabcloud_domain_name
-    - openhabcloud_container_network
+    - openhab_cloud_identifier
+    - openhab_cloud_uid
+    - openhab_cloud_gid
+    - openhab_cloud_domain_name
+    - openhab_cloud_container_network
