--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -33,7 +33,10 @@ openhab_cloud_container_additional_networks_custom: []
 openhab_cloud_container_extra_arguments: []
 
 # List of systemd services that the openhab-cloud systemd service depends on
-openhab_cloud_systemd_required_services_list: ['docker.service', 'mongodb.service', 'redis.service']
+openhab_cloud_systemd_required_services_list: "{{ openhab_cloud_systemd_required_services_list_default + openhab_cloud_systemd_required_services_list_auto + openhab_cloud_systemd_required_services_list_custom }}"
+openhab_cloud_systemd_required_services_list_default: "{{ [devture_systemd_docker_base_docker_service_name] if devture_systemd_docker_base_docker_service_name else [] }}"
+openhab_cloud_systemd_required_services_list_auto: ['mongodb.service', 'redis.service']
+openhab_cloud_systemd_required_services_list_custom: []
 
 # List of systemd services that openhab-cloud systemd service wants
 openhab_cloud_systemd_wanted_services_list: []
