--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -59,6 +59,7 @@
   community.general.docker_network:
     name: "{{ openhab_cloud_container_network }}"
     driver: bridge
+    driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
 
 - name: Ensure openHAB Cloud systemd service installed
   ansible.builtin.template:
