Use community docker action

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -56,7 +56,7 @@
   until: result is not failed
 
 - name: Ensure openHAB Cloud container network is created
-  community.general.docker_network:
+  community.docker.docker_network:
     name: "{{ openhab_cloud_container_network }}"
     driver: bridge
     driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
